20Aug00=======================================================================
1. Added system Alias for set/nodxgrid => unset/dxgrid
2. Add full individual checking for all PC protocol fields in all messages
and removed any language dependant stuff (hopefully).
3. console.pl is now a bit more international (client.c/pl already are)
19Aug00=======================================================================
1. Added an efficiency thing for AUTOLOADed accessors from OO Perl by Conway.
2. Fiddled with the rtty and digital bandplan frequencies.
18Aug00=======================================================================
1. added a couple of changes for perl 5.6.0
2. removed del_dup from DXUser for earlier versions of DB '1.85' (ie real ones
not 2.x versions in 1.85 compatibility mode).
3. Started the OOing of the PC protocol stuff.
15Aug00=======================================================================
1. added 1.25 of the admin manual html
14Aug00=======================================================================
1. Added regex support to sh/dup_*.pl commands
2. fixed rcmd in crontab so that will work again
13Aug00=======================================================================
1. removed extra /60 in AnnTalk to make deduping of announces work a bit
better for longer...
05Aug00=======================================================================
1. Fixed hex character problem put in somewhen in the C Client
03Aug00=======================================================================
1. caught some more signals (are any of these causing the random stopping
of the code?
2. the Console now requires 1.05 of the Curses module ^R REFRESHES THE SCREEN
(as does ^L) AT LAST!!!!!
02Aug00=======================================================================
1. put back hex check exception for PC29
01Aug00=======================================================================
1. made the export and import ascii system work finally. The user_asc file